--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,7 @@
 {
     "$schema": "https://json.schemastore.org/tsconfig",
     "compilerOptions": {
-        "outDir": "./dist",
-        "rootDir": "src"
+        "outDir": "./dist"
     },
     "exclude": [
         "node_modules",
