--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -100,30 +100,24 @@ repos:
     rev: v8.27.0
     hooks:
       - id: gitleaks
-
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: "v4.0.0-alpha.8"
+  - repo: local
     hooks:
       - id: prettier
-        additional_dependencies:
-          - "prettier@3.3.3"
-          - "prettier-plugin-multiline-arrays@3.0.6"
+        name: prettier
+        entry: node_modules/.bin/prettier --write --ignore-unknown
+        language: system
         exclude: "^dist/.*$"
-
-  - repo: https://github.com/pre-commit/mirrors-eslint
-    rev: "v9.38.0" # Use the sha / tag you want to point at
-    hooks:
       - id: eslint
+        name: eslint
+        entry: node_modules/.bin/eslint --fix
+        language: system
         files: \.[jt]sx?$
-        additional_dependencies:
-          - eslint@9.5.0
-          - eslint-plugin-jest@28.6.0
   - repo: https://github.com/fsfe/reuse-tool
     rev: "v6.1.2"
     hooks:
       - id: reuse
   - repo: https://github.com/renovatebot/pre-commit-hooks
-    rev: 41.159.1
+    rev: 41.159.4
     hooks:
       - id: renovate-config-validator
         language_version: 20.18.0
