--- a/cog.toml
+++ b/cog.toml
@@ -2,7 +2,7 @@
 #
 # SPDX-License-Identifier: MIT
 
-from_latest_tag = true
+from_latest_tag = false
 ignore_merge_commits = true
 ignore_fixup_commits = true
 disable_changelog = false
@@ -16,6 +16,7 @@ pre_bump_hooks = []
 post_bump_hooks = []
 pre_package_bump_hooks = []
 post_package_bump_hooks = []
+tag_prefix = "v"
 
 [git_hooks]
 
