ci: include cog check in the ci release workflow

--- a/cog.toml
+++ b/cog.toml
@@ -9,7 +9,7 @@ disable_changelog = false
 disable_bump_commit = false
 generate_mono_repository_global_tag = false
 generate_mono_repository_package_tags = false
-branch_whitelist = ["main", "next"]
+# branch_whitelist = ["main", "next"]
 skip_ci = "[skip ci]"
 skip_untracked = false
 pre_bump_hooks = []
