--- a/cog.toml
+++ b/cog.toml
@@ -2,14 +2,14 @@
 #
 # SPDX-License-Identifier: MIT
 
-from_latest_tag = false
+from_latest_tag = true
 ignore_merge_commits = true
 ignore_fixup_commits = true
 disable_changelog = false
 disable_bump_commit = false
 generate_mono_repository_global_tag = false
 generate_mono_repository_package_tags = false
-# branch_whitelist = ["main", "next"]
+branch_whitelist = ["main", "next"]
 skip_ci = "[skip ci]"
 skip_untracked = false
 pre_bump_hooks = []
