--- a/.github/workflows/codeql-analysis.yaml
+++ b/.github/workflows/codeql-analysis.yaml
@@ -1,50 +1,55 @@
-name: "CodeQL Analysis"
+name: 'CodeQL Analysis'
 
 on:
-  push:
-    branches:
-      - "main"
-      - "next"
-  pull_request:
-    # The branches below must be a subset of the branches above
-    branches:
-      - "main"
-      - "next"
-  schedule:
-    - cron: "31 19 * * 5"
+    push:
+        branches:
+            - 'main'
+            - 'next'
+    pull_request:
+        # The branches below must be a subset of the branches above
+        branches:
+            - 'main'
+            - 'next'
+    schedule:
+        - cron: '31 19 * * 5'
 
 permissions:
-  contents: read
+    contents: read
 
 jobs:
-  analyze:
-    name: Analyze
-    runs-on: ubuntu-latest
-    permissions:
-      security-events: write
+    analyze:
+        name: Analyze
+        runs-on: ubuntu-latest
+        permissions:
+            security-events: write
 
-    strategy:
-      fail-fast: false
-      matrix:
-        language: ["TypeScript"]
+        strategy:
+            fail-fast: false
+            matrix:
+                language: ['TypeScript']
 
-    steps:
-      - name: Harden Runner
-        uses: step-security/harden-runner@f4a75cfd619ee5ce8d5b864b0d183aff3c69b55a # v2.13.1
-        with:
-          egress-policy: audit
+        steps:
+            - name: Harden Runner
+              uses: step-security/harden-runner@f4a75cfd619ee5ce8d5b864b0d183aff3c69b55a # v2.13.1
+              with:
+                  disable-sudo: true
+                  egress-policy: block
+                  allowed-endpoints: >
+                      github.com:443
+                      mise.jdx.dev:443
+                      registry.npmjs.org:443
 
-      - name: Checkout repository
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+            - name: Checkout repository
+              uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@16140ae1a102900babc80a33c44059580f687047 # v4.30.9
-        with:
-          languages: ${{ matrix.language }}
-          source-root: src
+            - name: Initialize CodeQL
+              uses: github/codeql-action/init@16140ae1a102900babc80a33c44059580f687047 # v4.30.9
+              with:
+                  languages: ${{ matrix.language }}
+                  source-root: src
 
-      - name: Autobuild
-        uses: github/codeql-action/autobuild@16140ae1a102900babc80a33c44059580f687047 # v4.30.9
+            - name: Autobuild
+              uses: github/codeql-action/autobuild@16140ae1a102900babc80a33c44059580f687047 # v4.30.9
 
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@16140ae1a102900babc80a33c44059580f687047 # v4.30.9
+            - name: Perform CodeQL Analysis
+              uses: github/codeql-action/analyze@16140ae1a102900babc80a33c44059580f687047 # v4.30.9
