--- a/.github/workflows/scorecard.yaml
+++ b/.github/workflows/scorecard.yaml
@@ -1,10 +1,10 @@
 name: Scorecard supply-chain security
 on:
-  branch_protection_rule:
-  schedule:
-    - cron: "30 1 * * 4"
-  push:
-    branches: ["next"]
+    branch_protection_rule:
+    schedule:
+        - cron: '30 1 * * 4'
+    push:
+        branches: ['next']
 
 permissions: read-all
 
@@ -17,31 +17,36 @@ jobs:
             id-token: write
 
     steps:
-      - name: Harden Runner
-        uses: step-security/harden-runner@f4a75cfd619ee5ce8d5b864b0d183aff3c69b55a # v2.13.1
-        with:
-          egress-policy: audit
+        - name: Harden Runner
+          uses: step-security/harden-runner@f4a75cfd619ee5ce8d5b864b0d183aff3c69b55a # v2.13.1
+          with:
+              disable-sudo: true
+              egress-policy: block
+              allowed-endpoints: >
+                  github.com:443
+                  mise.jdx.dev:443
+                  registry.npmjs.org:443
 
-      - name: Checkout code
-        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
-        with:
-          persist-credentials: false
+        - name: Checkout code
+          uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+          with:
+              persist-credentials: false
 
-      - name: Run analysis
-        uses: ossf/scorecard-action@4eaacf0543bb3f2c246792bd56e8cdeffafb205a # v2.4.3
-        with:
-          results_file: results.sarif
-          results_format: sarif
-          publish_results: true
+        - name: Run analysis
+          uses: ossf/scorecard-action@4eaacf0543bb3f2c246792bd56e8cdeffafb205a # v2.4.3
+          with:
+              results_file: results.sarif
+              results_format: sarif
+              publish_results: true
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.pre.node20
-        with:
-          name: SARIF file
-          path: results.sarif
-          retention-days: 5
+        - name: Upload artifact
+          uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.pre.node20
+          with:
+              name: SARIF file
+              path: results.sarif
+              retention-days: 5
 
-      - name: Upload to code-scanning
-        uses: github/codeql-action/upload-sarif@16140ae1a102900babc80a33c44059580f687047 # v4
-        with:
-          sarif_file: results.sarif
+        - name: Upload to code-scanning
+          uses: github/codeql-action/upload-sarif@16140ae1a102900babc80a33c44059580f687047 # v4
+          with:
+              sarif_file: results.sarif
