--- a/.github/workflows/check-dist.yaml
+++ b/.github/workflows/check-dist.yaml
@@ -34,6 +34,7 @@ jobs:
                       github.com:443
                       mise.jdx.dev:443
                       registry.npmjs.org:443
+                      api.github.com:443
 
             - name: Checkout repository
               uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
