--- a/.github/workflows/sonar-cloud.yaml
+++ b/.github/workflows/sonar-cloud.yaml
@@ -33,6 +33,7 @@ jobs:
                       scanner.sonarcloud.io:443
                       sonarcloud.io:443
                       mise.jdx.dev:443
+                      api.github.com:443
 
             - name: Checkout repository
               uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
