ci: update the harden_runner allows access to other targets

--- a/.github/workflows/sonar-cloud.yaml
+++ b/.github/workflows/sonar-cloud.yaml
@@ -33,7 +33,10 @@ jobs:
                       scanner.sonarcloud.io:443
                       sonarcloud.io:443
                       mise.jdx.dev:443
+                      mise-versions.jdx.dev:443
                       api.github.com:443
+                      index.crates.io:443
+                      nodejs.org:443
 
             - name: Checkout repository
               uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
