--- a/.github/workflows/codeql-analysis.yaml
+++ b/.github/workflows/codeql-analysis.yaml
@@ -38,6 +38,7 @@ jobs:
                       github.com:443
                       mise.jdx.dev:443
                       api.github.com:443
+                      release-assets.githubusercontent.com:443
                       registry.npmjs.org:443
 
             - name: Checkout repository
