--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,6 +16,7 @@ jobs:
             - name: Harden Runner
               uses: step-security/harden-runner@f4a75cfd619ee5ce8d5b864b0d183aff3c69b55a # v2.13.1
               with:
+                  disable-sudo: true
                   egress-policy: block
                   allowed-endpoints: >
                       api.codacy.com:443
@@ -48,6 +49,7 @@ jobs:
             - name: Harden Runner
               uses: step-security/harden-runner@f4a75cfd619ee5ce8d5b864b0d183aff3c69b55a # v2.13.1
               with:
+                  disable-sudo: true
                   egress-policy: block
                   allowed-endpoints: >
                       github.com:443
@@ -66,6 +68,7 @@ jobs:
             - name: Harden Runner
               uses: step-security/harden-runner@f4a75cfd619ee5ce8d5b864b0d183aff3c69b55a # v2.13.1
               with:
+                  disable-sudo: true
                   egress-policy: block
                   allowed-endpoints: >
                       github.com:443
@@ -87,6 +90,12 @@ jobs:
                       github.com:443
                       mise.jdx.dev:443
                       registry.npmjs.org:443
+                      api.github.com:443
+                      api.codacy.com:443
+                      artifacts.codacy.com:443
+                      cli.codecov.io:443
+                      ingest.codecov.io:443
+                      raw.githubusercontent.com:443
 
             - name: Checkout repository
               uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
