--- a/.github/workflows/codeql-analysis.yaml
+++ b/.github/workflows/codeql-analysis.yaml
@@ -35,11 +35,15 @@ jobs:
                   disable-sudo: true
                   egress-policy: block
                   allowed-endpoints: >
-                      github.com:443
-                      mise.jdx.dev:443
                       api.github.com:443
-                      release-assets.githubusercontent.com:443
+                      github.com:443
+                      index.crates.io:443
+                      mise-versions.jdx.dev:443
+                      mise.jdx.dev:443
+                      nodejs.org:443
+                      raw.githubusercontent.com:443
                       registry.npmjs.org:443
+                      release-assets.githubusercontent.com:443
                       static.crates.io:443
 
             - name: Checkout repository
