--- a/.github/workflows/scorecard.yaml
+++ b/.github/workflows/scorecard.yaml
@@ -26,6 +26,11 @@ jobs:
                       github.com:443
                       mise.jdx.dev:443
                       registry.npmjs.org:443
+                      raw.githubusercontent.com:443
+                      mise-versions.jdx.dev:443
+                      index.crates.io:443
+                      static.crates.io:443
+                      nodejs.org:443
 
             - name: Checkout code
               uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
