--- a/.github/workflows/sonar-cloud.yaml
+++ b/.github/workflows/sonar-cloud.yaml
@@ -26,17 +26,19 @@ jobs:
                   disable-sudo: true
                   egress-policy: block
                   allowed-endpoints: >
+                      api.github.com:443
                       api.sonarcloud.io:443
                       binaries.sonarsource.com:443
                       github.com:443
+                      index.crates.io:443
+                      mise-versions.jdx.dev:443
+                      mise.jdx.dev:443
+                      nodejs.org:443
                       registry.npmjs.org:443
+                      release-assets.githubusercontent.com:443
                       scanner.sonarcloud.io:443
                       sonarcloud.io:443
-                      mise.jdx.dev:443
-                      mise-versions.jdx.dev:443
-                      api.github.com:443
-                      index.crates.io:443
-                      nodejs.org:443
+                      static.crates.io:443
 
             - name: Checkout repository
               uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
