--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -87,15 +87,19 @@ jobs:
                   disable-sudo: true
                   egress-policy: block
                   allowed-endpoints: >
-                      github.com:443
-                      mise.jdx.dev:443
-                      registry.npmjs.org:443
-                      api.github.com:443
                       api.codacy.com:443
+                      api.github.com:443
                       artifacts.codacy.com:443
                       cli.codecov.io:443
+                      github.com:443
+                      index.crates.io:443
                       ingest.codecov.io:443
+                      mise-versions.jdx.dev:443
+                      mise.jdx.dev:443
+                      nodejs.org:443
                       raw.githubusercontent.com:443
+                      registry.npmjs.org:443
+                      static.crates.io:443
 
             - name: Checkout repository
               uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
