--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -30,6 +30,7 @@ jobs:
                       registry.npmjs.org:443
                       release-assets.githubusercontent.com:443
                       storage.googleapis.com:443
+                      mise.jdx.dev:443
 
             - name: Checkout repository
               uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
