--- a/.github/workflows/check-dist.yaml
+++ b/.github/workflows/check-dist.yaml
@@ -40,6 +40,7 @@ jobs:
                       raw.githubusercontent.com:443
                       registry.npmjs.org:443
                       static.crates.io:443
+                      release-assets.githubusercontent.com
 
             - name: Checkout repository
               uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
