--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,6 +20,7 @@ jobs:
                   egress-policy: block
                   allowed-endpoints: >
                       api.codacy.com:443
+                      api.github.com:443
                       artifacts.codacy.com:443
                       cli.codecov.io:443
                       github.com:443
@@ -101,6 +102,7 @@ jobs:
                       raw.githubusercontent.com:443
                       registry.npmjs.org:443
                       static.crates.io:443
+                      release-assets.githubusercontent.com
 
             - name: Checkout repository
               uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
