--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -32,6 +32,10 @@ jobs:
                       release-assets.githubusercontent.com:443
                       storage.googleapis.com:443
                       mise.jdx.dev:443
+                      mise-versions.jdx.dev:443
+                      nodejs.org:443
+                      index.crates.io:443
+                      static.crates.io:443
 
             - name: Checkout repository
               uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
@@ -103,6 +107,10 @@ jobs:
                       registry.npmjs.org:443
                       static.crates.io:443
                       release-assets.githubusercontent.com
+                      mise-versions.jdx.dev:443
+                      nodejs.org:443
+                      index.crates.io:443
+                      static.crates.io:443
 
             - name: Checkout repository
               uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
