build: update typscript config files

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,6 +21,9 @@
         "skipLibCheck": true,
         "strict": true,
         "strictNullChecks": true,
-        "target": "ES2022"
+        "target": "ES2022",
+        "types": [
+            "node"
+        ]
     }
 }
