--- a/package.json
+++ b/package.json
@@ -13,31 +13,32 @@
         ]
     },
     "dependencies": {
-        "@actions/core": "1.11.1",
-        "true-myth": "9.0.1"
+        "@actions/core": "2.0.3",
+        "true-myth": "9.3.1"
     },
     "description": "A Github Action to introduce a random delay in a Job",
     "devDependencies": {
-        "@eslint/js": "9.38.0",
-        "@rollup/plugin-commonjs": "28.0.9",
+        "@eslint/js": "9.39.2",
+        "@rollup/plugin-commonjs": "29.0.0",
         "@rollup/plugin-node-resolve": "16.0.3",
         "@rollup/plugin-typescript": "12.3.0",
-        "@stylistic/eslint-plugin": "5.5.0",
+        "@stylistic/eslint-plugin": "5.7.1",
         "@types/eslint": "9.6.1",
+        "@types/node": "^25.0.10",
         "@vercel/ncc": "0.38.4",
-        "@vitest/coverage-v8": "4.0.3",
-        "@vitest/eslint-plugin": "1.3.24",
-        "@vitest/ui": "4.0.3",
-        "eslint": "9.38.0",
-        "fast-check": "4.3.0",
-        "globals": "16.4.0",
-        "prettier": "3.6.2",
-        "prettier-plugin-multiline-arrays": "4.0.3",
-        "rollup": "4.52.5",
+        "@vitest/coverage-v8": "4.0.18",
+        "@vitest/eslint-plugin": "1.6.6",
+        "@vitest/ui": "4.0.18",
+        "eslint": "9.39.2",
+        "fast-check": "4.5.3",
+        "globals": "17.2.0",
+        "prettier": "3.8.1",
+        "prettier-plugin-multiline-arrays": "4.1.3",
+        "rollup": "4.57.0",
         "tslib": "2.8.1",
         "typescript": "5.9.3",
-        "typescript-eslint": "8.46.2",
-        "vitest": "4.0.3"
+        "typescript-eslint": "8.54.0",
+        "vitest": "4.0.18"
     },
     "keywords": [
         "actions",
