build: add default assignee to sonar project config

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,4 +10,7 @@ sonar.organization=alisajid
 #sonar.sources=.
 
 # Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sourceEncoding=UTF-8
+
+# Default issue assignee
+sonar.issues.defaultAssigneeLogin=AliSajid
