--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,6 @@
     ],
     "extends": "./tsconfig.base.json",
     "include": [
-        "src",
-        "rollup.config.ts",
-        "vitest.config.ts"
+        "src"
     ]
 }
