--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,10 +7,13 @@ sonar.organization=alisajid
 
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+sonar.sources=src/
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
 
 # Default issue assignee
 sonar.issues.defaultAssigneeLogin=AliSajid
+
+# Specify the coverage report Path
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
