--- a/action.yaml
+++ b/action.yaml
@@ -2,24 +2,24 @@
 #
 # SPDX-License-Identifier: MIT
 
-name: "Random Wait Action"
-description: "A Github Action to introduce a random delay in a Job"
-author: "Ali Sajid Imami"
+name: 'Random Wait Action'
+description: 'A GitHub Action to introduce a random delay in a Job'
+author: 'Ali Sajid Imami'
 inputs:
-  minimum:
-    required: false
-    description: "Minimum wait time in seconds"
-    default: "1"
-  maximum:
-    required: false
-    description: "Maximum wait time in seconds"
-    default: "10"
+    minimum:
+        required: false
+        description: 'Minimum wait time in seconds'
+        default: '1'
+    maximum:
+        required: false
+        description: 'Maximum wait time in seconds'
+        default: '10'
 outputs:
-  wait_time:
-    description: "The time waited in seconds"
+    wait_time:
+        description: 'The time waited in seconds'
 runs:
-  using: "node20"
-  main: "dist/index.cjs"
+    using: 'node20'
+    main: 'dist/index.cjs'
 branding:
-  icon: "clock"
-  color: "blue"
+    icon: 'clock'
+    color: 'blue'
