--- a/package.json
+++ b/package.json
@@ -22,9 +22,8 @@
         "@rollup/plugin-commonjs": "29.0.0",
         "@rollup/plugin-node-resolve": "16.0.3",
         "@rollup/plugin-typescript": "12.3.0",
-        "@stylistic/eslint-plugin": "5.7.1",
         "@types/eslint": "9.6.1",
-        "@types/node": "^25.0.10",
+        "@types/node": "22.0.0",
         "@vercel/ncc": "0.38.4",
         "@vitest/coverage-v8": "4.0.18",
         "@vitest/eslint-plugin": "1.6.6",
