ci: exclude main.ts from the test coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,6 +12,9 @@ sonar.sources=src/
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
 
+# Exclude main.ts from coverage analysis (GitHub Actions entry point - hard to test)
+sonar.coverage.exclusions=src/main.ts
+
 # Default issue assignee
 sonar.issues.defaultAssigneeLogin=AliSajid
 
